added product details

--- a/product-details.html
+++ b/product-details.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="aboutus.html">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
+                        <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> <span id="cart-count" class="badge bg-danger">0</span></a>
                     </li>
                 </ul>
             </div>
