--- a/aboutus.html
+++ b/aboutus.html
@@ -16,9 +16,25 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <i class="fas fa-bars"></i>
             </button>
-            
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <button id="colorChanger" class="color-change-btn">
+                            <i class="fas fa-palette"></i> Change Vibe
+                        </button>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="aboutus.html">About us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cart.html"><i class="fas fa-shopping-cart"></i> <span id="cart-count" class="badge bg-danger">0</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
+    <!-- Rest of your aboutus.html content remains exactly the same -->
     <!-- About Hero Section -->
     <section class="about-hero">
         <div class="container">
@@ -83,9 +99,56 @@
 
     <!-- Footer -->
     <footer class="site-footer">
-        <!-- Your existing footer code -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <div class="newsletter">
+                        <h3 class="footer-heading">JOIN OUR NEWSLETTER</h3>
+                        <p class="footer-text">Get 10% off your first order and updates on new drops</p>
+                        <form class="newsletter-form">
+                            <div class="input-group">
+                                <input type="email" class="form-control" placeholder="Your email address" required>
+                                <button type="submit" class="btn btn-dark">SUBSCRIBE</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-md-4 mb-4 mb-md-0">
+                            <h4 class="footer-heading">SLEEKWEARS</h4>
+                            <p class="footer-text">Elevating streetwear since 2025</p>
+                        </div>
+                        <div class="col-md-4 mb-4 mb-md-0">
+                            <h4 class="footer-heading">LINKS</h4>
+                            <ul class="footer-links">
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Shipping Policy</a></li>
+                                <li><a href="#">Business</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4">
+                            <h4 class="footer-heading">CONNECT</h4>
+                            <div class="social-icons">
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-tiktok"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-12 text-center">
+                    <p class="copyright">&copy; 2025 SLEEKWEARS. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
