--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
+                        <button id="colorChanger" class="color-change-btn">
+                            <i class="fas fa-palette"></i> Change Vibe
+                        </button>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="aboutus.html">About us</a>
                     </li>
                     <li class="nav-item">
@@ -30,14 +35,21 @@
     </nav>
 
     <!-- Header Section -->
-    <header class="header-container">
-        <div class="container">
+ 
+<header class="header-container">
+    <div class="container">
+        <div class="header-top">
             <h1>ELEVATE YOUR STREETWEAR</h1>
             <p>Minimal designs. Maximum impact. Shop our latest collection.</p>
-            <a href="#" class="btn">SHOP NOW</a>
         </div>
-    </header>
-
+        <div class="header-border"></div>
+        <div class="header-bottom">
+            <a href="#" class="vibe-btn three-d-btn">
+                DISCOVER <i class="fas fa-chevron-down"></i>
+            </a>
+        </div>
+    </div>
+</header>
     <!-- Latest Drops Section -->
     <section class="latest-drops">
         <div class="container">
@@ -103,18 +115,7 @@
     <footer class="site-footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mb-5 mb-lg-0">
-                    <div class="newsletter">
-                        <h3 class="footer-heading">JOIN OUR NEWSLETTER</h3>
-                        <p class="footer-text">Get 10% off your first order and updates on new drops</p>
-                        <form class="newsletter-form">
-                            <div class="input-group">
-                                <input type="email" class="form-control" placeholder="Your email address" required>
-                                <button type="submit" class="btn btn-dark">SUBSCRIBE</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+                
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="col-md-4 mb-4 mb-md-0">
