--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -6,13 +6,13 @@
     <title>About SleekWears</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html">SLEEKWEARS</a>
+            <a class="navbar-brand" href="../index.html">SLEEKWEARS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <i class="fas fa-bars"></i>
             </button>
@@ -45,7 +45,7 @@
                     <p>SleekWears was created by a team of passionate designers who believe streetwear should be both stylish and comfortable. Our mission is to deliver premium quality urban fashion that makes a statement.</p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="pics/imgone.jpeg" alt="SleekWears Collection" class="img-fluid rounded">
+                    <img src="../pics/imgone.jpeg" alt="SleekWears Collection" class="img-fluid rounded">
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="pics/img2.jpg" alt="SleekWears Design Process" class="img-fluid rounded">
+                    <img src="../pics/img2.jpg" alt="SleekWears Design Process" class="img-fluid rounded">
                 </div>
                 <div class="col-lg-6">
                     <h2>OUR PHILOSOPHY</h2>
@@ -103,12 +103,12 @@
             <div class="row">
                 <div class="col-lg-6 mb-5 mb-lg-0">
                     <div class="newsletter">
-                        <h3 class="footer-heading">JOIN OUR NEWSLETTER</h3>
-                        <p class="footer-text">Get 10% off your first order and updates on new drops</p>
+                        <h3 class="footer-heading">Contact</h3>
+                        <p class="footer-text">Submit your email to connect with us</p>
                         <form class="newsletter-form">
                             <div class="input-group">
                                 <input type="email" class="form-control" placeholder="Your email address" required>
-                                <button type="submit" class="btn btn-dark">SUBSCRIBE</button>
+                                <button type="submit" class="btn btn-dark">SUBMIT</button>
                             </div>
                         </form>
                     </div>
@@ -149,6 +149,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
