--- a/html/cart.html
+++ b/html/cart.html
@@ -6,17 +6,23 @@
     <title>Your Cart | SleekWears</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html">SLEEKWEARS</a>
+            <a class="navbar-brand" href="../index.html">SLEEKWEARS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <button id="colorChanger" class="color-change-btn">
+                            <i class="fas fa-palette"></i> Change Vibe
+                        </button>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="aboutus.html">About us</a>
                     </li>
@@ -28,13 +34,15 @@
         </div>
     </nav>
 
+    <!-- Cart Section -->
     <section class="cart-section py-5">
         <div class="container">
             <h2 class="mb-4">YOUR CART</h2>
             <div id="cart-items" class="mb-4">
+                <!-- Cart items will be inserted here by JavaScript -->
                 <div class="text-center py-5">
                     <p>Your cart is empty</p>
-                    <a href="index.html" class="btn btn-dark">Continue Shopping</a>
+                    <a href="../index.html" class="btn btn-dark">Continue Shopping</a>
                 </div>
             </div>
             
@@ -57,22 +65,24 @@
                     <span>Total:</span>
                     <span id="total">$5.00</span>
                 </div>
-                <button id="checkout-btn" class="btn btn-dark w-100 mt-4">PROCEED TO CHECKOUT</button>
+                <!-- Linking to checkout.html -->
+                <a href="checkout.html" id="checkout-btn" class="btn btn-dark w-100 mt-4">PROCEED TO CHECKOUT</a>
             </div>
         </div>
     </section>
 
+    <!-- Footer -->
     <footer class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 mb-5 mb-lg-0">
                     <div class="newsletter">
-                        <h3 class="footer-heading">JOIN OUR NEWSLETTER</h3>
-                        <p class="footer-text">Get 10% off your first order and updates on new drops</p>
+                        <h3 class="footer-heading">CONTACT</h3>
+                        <p class="footer-text">SUBMIT YOUR EMAIL TO CONNECT WITH US</p>
                         <form class="newsletter-form">
                             <div class="input-group">
                                 <input type="email" class="form-control" placeholder="Your email address" required>
-                                <button type="submit" class="btn btn-dark">SUBSCRIBE</button>
+                                <button type="submit" class="btn btn-dark">SUBMIT</button>
                             </div>
                         </form>
                     </div>
@@ -106,13 +116,13 @@
             </div>
             <div class="row mt-4">
                 <div class="col-12 text-center">
-                    <p class="copyright">&copy; 2023 SLEEKWEARS. All rights reserved.</p>
+                    <p class="copyright">&copy; 2025 SLEEKWEARS. All rights reserved.</p>
                 </div>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
