--- a/html/product-details.html
+++ b/html/product-details.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Cart | SleekWears</title>
+    <title>Product Details | SleekWears</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html">SLEEKWEARS</a>
+            <a class="navbar-brand" href="../index.html">SLEEKWEARS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <i class="fas fa-bars"></i>
             </button>
@@ -34,39 +34,38 @@
         </div>
     </nav>
 
-    <!-- Rest of your cart.html content remains exactly the same -->
-    <!-- Cart Section -->
-    <section class="cart-section py-5">
+    <!-- Rest of your product-details.html content remains exactly the same -->
+    <!-- Product Detail Section -->
+    <section class="product-detail py-5">
         <div class="container">
-            <h2 class="mb-4">YOUR CART</h2>
-            <div id="cart-items" class="mb-4">
-                <!-- Cart items will be inserted here by JavaScript -->
-                <div class="text-center py-5">
-                    <p>Your cart is empty</p>
-                    <a href="index.html" class="btn btn-dark">Continue Shopping</a>
+            <div class="row">
+                <div class="col-lg-6">
+                    <img id="detail-product-image" src="" alt="Product Image" class="img-fluid rounded">
                 </div>
-            </div>
-            
-            <div class="cart-summary bg-light p-4 rounded">
-                <h4 class="mb-4">ORDER SUMMARY</h4>
-                <div class="d-flex justify-content-between mb-2">
-                    <span>Subtotal:</span>
-                    <span id="subtotal">$0.00</span>
+                <div class="col-lg-6">
+                    <h2 id="detail-product-title"></h2>
+                    <p id="detail-product-price" class="h4 my-3"></p>
+                    <p id="detail-product-description" class="mb-4"></p>
+                    <div class="d-flex gap-3 mb-4">
+                        <select class="form-select" style="width: 100px;">
+                            <option selected>Size</option>
+                            <option>XS</option>
+                            <option>S</option>
+                            <option>M</option>
+                            <option>L</option>
+                            <option>XL</option>
+                        </select>
+                        <select class="form-select" style="width: 100px;">
+                            <option selected>Qty</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                    <button class="btn btn-dark btn-lg">ADD TO CART</button>
                 </div>
-                <div class="d-flex justify-content-between mb-2">
-                    <span>Shipping:</span>
-                    <span id="shipping">$5.00</span>
-                </div>
-                <div class="d-flex justify-content-between mb-3">
-                    <span>Tax:</span>
-                    <span id="tax">$0.00</span>
-                </div>
-                <hr>
-                <div class="d-flex justify-content-between fw-bold">
-                    <span>Total:</span>
-                    <span id="total">$5.00</span>
-                </div>
-                <button id="checkout-btn" class="btn btn-dark w-100 mt-4">PROCEED TO CHECKOUT</button>
             </div>
         </div>
     </section>
@@ -123,6 +122,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
